Fix AGC spacing

--- a/src/components/AttentionGrabbingCard/index.css
+++ b/src/components/AttentionGrabbingCard/index.css
@@ -38,7 +38,7 @@
 }
 
 .AttentionGrabbingCard-link {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 }
 
 @media (min-width: 30rem) {
